--- a/main.css
+++ b/main.css
@@ -7,9 +7,11 @@ div {
   box-sizing: border-box;
 }
 
+/*
 #buttonWrapper {
   height: 100px;
 }
+*/
 
 .button {
   display: flex;
@@ -47,7 +49,7 @@ div {
 }
 
 .wrapper {
-  width: 400px;
+  width: 360px;
   height: 100px;
   margin-top: 20px;
 }
@@ -56,7 +58,7 @@ div {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
+  width: 45%;
   height: 100%;
   margin-left: 5%;
   float: left;
@@ -117,5 +119,6 @@ div {
 }
 
 #numbersWrapper {
-  height: 360px;
+/*  height: 360px;*/
+/*  height: inherit;*/
 }
