--- a/main.css
+++ b/main.css
@@ -7,16 +7,87 @@ h2 {
   text-align: center;
 }
 
+h4 {
+  margin-top: 8px;
+  margin-bottom: 4px;
+}
+
 div {
   box-sizing: border-box;
   position: relative;
 }
 
-/*
-#buttonWrapper {
-  height: 100px;
+#infoIcon {
+  position: fixed;
+  width: 28px;
+  height: 28px;
+  top: 12px;
+  right: 12px;
+  cursor: pointer;
 }
+
+#infoPopup {
+  position: fixed;
+  width: 320px;
+  height: 480px;
+  left: 49%;
+  top: 46%;
+  transform: translate(-50%, -50%);
+  border: 4px solid white;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  z-index: 2;
+  background-color: rgb(112, 255, 219);
+  border-radius: 12px;
+  text-align: center;
+  padding: 24px;
+}
+
+#closeIcon {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 12px;
+  right: 12px;
+  cursor: pointer;
+}
+
+#infoPopup p, ol, li{
+  font-size: 12px;
+}
+
+ol {
+  text-align: left;
+}
+
+#infoPopupTabWrapper {
+  position: absolute;
+  width: 40px;
+  top: 0px;
+  right: -40px;
+  padding-top: 12px;
+}
+
+.infoTab {
+  border-radius: 0px 10px 10px 0px;
+  background-color: rgb(91, 212, 181);
+  border: 4px solid white;
+/*
+  border-top: 4px solid white;
+  border-right: 4px solid white;
+  border-bottom: 4px solid white;
 */
+  writing-mode: vertical-rl;
+  padding: 6px;
+  cursor: pointer;
+}
+
+.infoTab.selected {
+  border-left: 0px solid white;
+  padding-left: 10px;
+  background-color: rgb(112, 255, 219);
+}
 
 .button {
   display: flex;
@@ -184,4 +255,9 @@ div {
   text-overflow: clip;
   z-index: 2;
   color: darkturquoise;
+}
+
+.hidden {
+  display: none;
+  visibility: hidden;
 }
