--- a/main.css
+++ b/main.css
@@ -26,46 +26,49 @@ div {
   cursor: pointer;
 }
 
-#infoPopup {
+#infoPopupWrapper {
   position: fixed;
   width: 320px;
   height: 480px;
-  left: 49%;
+  left: 50%;
   top: 46%;
   transform: translate(-50%, -50%);
+  z-index: 2;
+}
+
+#infoPopupWindow {
+  width: 90%;
+  height: 100%;
   border: 4px solid white;
   display: flex;
   align-items: center;
   flex-direction: column;
-  z-index: 2;
   background-color: rgb(112, 255, 219);
   border-radius: 12px;
   text-align: center;
-  padding: 24px;
+  padding: 18px;
+  overflow: scroll;
 }
 
-#closeIcon {
-  position: absolute;
-  width: 24px;
-  height: 24px;
-  top: 12px;
-  right: 12px;
-  cursor: pointer;
-}
-
-#infoPopup p, ol, li{
+#infoPopupWindow p, ol, li {
   font-size: 12px;
+}
+
+#infoPopupWindow h2, h3, h4 {
+  margin-bottom: 0px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
 }
 
 ol {
   text-align: left;
 }
 
-#infoPopupTabWrapper {
+#infoPopupTabPanel {
   position: absolute;
-  width: 40px;
+  width: 15%;
   top: 0px;
-  right: -40px;
+  right: -12px;
   padding-top: 12px;
 }
 
@@ -73,11 +76,6 @@ ol {
   border-radius: 0px 10px 10px 0px;
   background-color: rgb(91, 212, 181);
   border: 4px solid white;
-/*
-  border-top: 4px solid white;
-  border-right: 4px solid white;
-  border-bottom: 4px solid white;
-*/
   writing-mode: vertical-rl;
   padding: 6px;
   cursor: pointer;
@@ -87,6 +85,15 @@ ol {
   border-left: 0px solid white;
   padding-left: 10px;
   background-color: rgb(112, 255, 219);
+}
+
+#closeIcon {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  top: 8px;
+  left: 8px;
+  cursor: pointer;
 }
 
 .button {
