Fill out information in info popup

--- a/main.css
+++ b/main.css
@@ -50,18 +50,23 @@ div {
   overflow: scroll;
 }
 
-#infoPopupWindow p, ol, li {
+#infoPopupWindow p, ol, ul, li {
   font-size: 12px;
+}
+
+b {
+  font-size: 16px;
+}
+
+#infoPopupWindow ol, ul, li {
+  margin-left: -12px;
+  text-align: left;
 }
 
 #infoPopupWindow h2, h3, h4 {
   margin-bottom: 0px;
-  margin-block-start: 0px;
+  margin-block-start: 20px;
   margin-block-end: 0px;
-}
-
-ol {
-  text-align: left;
 }
 
 #infoPopupTabPanel {
@@ -91,9 +96,10 @@ ol {
   position: absolute;
   width: 24px;
   height: 24px;
-  top: 8px;
-  left: 8px;
+  top: 10px;
+  left: 10px;
   cursor: pointer;
+  z-index: 10;
 }
 
 .button {
