--- a/main.css
+++ b/main.css
@@ -148,11 +148,10 @@ b {
 }
 
 .numTilesArrow {
-  font-size: 16px;
   cursor: pointer;
-  text-align: center;
-  width: 50%;
-  height: 20%;
+  width: 20%;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #gameWrapper {
